# software-python-ml-pipeline

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  cfg.yml  model_evaluation.ipynb  mypy.ini  pyproject.toml  readme.md  ruff.toml  seed.py
src/: __init__.py  app.py  config.py  main.py  models.py  process.py  test_process.py  test_train.py  train.py  utils.py
tests/: __init__.py  test_integration.py
tests/fixtures/: containers.py
